[package]
name = "mml-core"
version = "0.1.0"
edition = "2021"
authors = ["Leonardone <neetsdkasu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/neetsdkasu/mml"
description = "MML-on-OAPのMMLからSMFファイル(MIDIファイル)への変換処理を移植したもの"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java_data_io = { package = "java_data_io_rs", git = "https://bitbucket.org/neetsdkasu/java_data_io_rs", tag="v0.5.3" }
